feat: add white class

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2 id="contact">Contact</h2>
         <ul>
             <li>
-                <p>Address: Strasbourg, France</p>
+                <p>Address: <span class="white">Strasbourg, France</span></p>
                 <p>Phone: <a href="tel:+3000000000">+3375231xxxx</a></p>
                 <p>Email: <a href="mailto:rmxxtt@rmxxtt.com">rmxxtt@rmxxtt.com</a></p>
             </li>
