feat: add education

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <a href="#english-lvl">English</a>
                 </li>
                 <li>
+                    <a href="#education">Education</a>
+                </li>
+                <li>
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
@@ -52,8 +55,9 @@
             about C, C++, Java, Python and objective oriented analyze and design. During my career I have worked
             on many complex projects.
         </p>
-        <ul id="english-lvl">
-            <li><p>English level: <span class="white">B1</span></p></li>
+        <ul>
+            <li><p id="english-lvl">English level: <span class="white">B1</span></p></li>
+            <li><p id="education">Education: <span class="white">Universite Paris Saclay Rankings (Computer Science)</span></p></li>
         </ul>
         <h2 id="contact">Contact</h2>
         <ul>
