fix: br - validator wc3

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1>My CV</h1>
         <h2 id="about-me">About me</h2>
         <p>
-            Hi, my name is <span class="white">Sergej Snow</span>, I live in Strazburg, France. <br/><br/>
+            Hi, my name is <span class="white">Sergej Snow</span>, I live in Strazburg, France. <br><br>
             From Over 15 years of software development experience.
             I have worked on desktop and web applications, for PC’s and Mac’s. I have strong knowledge
             about C, C++, Java, Python and objective oriented analyze and design. During my career I have worked
