fix: escape-последовательности - validator wc3

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Task from CodeWars.</p>
         <pre>
             <code class="language-js">
-    const sum = (a, b) => {
+    const sum = (a, b) =&gt; {
         return a + b;
     }
 
